# aquamarine

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  manage.py  requirements.txt  tmp.txt
api/: tests.py  (+2 more)
project/: Dockerfile  pyproject.toml
project/api/: tests.py  views.py
project/api/carwash/services/: api_registration_auto_get_services.py  api_registration_auto_post_services.py
project/aquamarine/: asgi.py  settings.py  urls.py  wsgi.py
project/carwash/: admin.py  apps.py  consumers.py  forms.py  models.py  serializers.py  urls.py  views.py
project/carwash/exceptions/: exceptions.py
project/carwash/fixtures/: services.json
project/carwash/migrations/: 0003_alter_carwashregistration_total_cost.py
project/carwash/services/: carwash_user_registration_delete_service.py  registration_auto_get_services.py  registration_auto_post_services.py  request_call_processing_service.py  staff_detail_view_service.py  staff_registration_cancel_service.py  user_registration_cancel_service.py  validators.py
project/carwash/tests/: test_forms.py  test_models.py  test_views.py
project/carwash/use_cases/: registration_auto_use_cases.py  staff_detail_view_use_case.py
project/common/: utils.py
project/templates/admin/: base_site.html  color_theme_toggle.html
project/users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
project/users/permissions/: __init__.py  staff_permissions.py
project/users/tests/: test_forms.py  test_models.py  test_views.py
(+193 files in other folders)
